Next:
  - Fix INT 10h to keep hardware CRTC I/O port synchronized with BIOS DATA area
    copy so that other parts of INT 10h called by SetVideoMode do not accidentally
    talk to the wrong I/O ports. This fixes corrupted INT 10 Mode F display
    (640x350 monochrome graphics mode). (joncampbell123).
  - Add DOS Int21 0x5D 0x00 - remote server call
    Inspired by FeeDOS inthndlr.c
    With this change it is possible use a plain dosbox-x to install and run
    Windows for Workgroups V3.11 as an IPX server on the pcap ne2000 interface
    offering a host directory for read and persistent write access to an
    MSDOS machine running a WfW 3.11 IPX network client.
    Please don't forget mounting with -nocachedir
    (Issue #4162)(Yogi-baer)
  - Fix missing keystroke SDLK_LESS on DE keyboard on Raspbian OS (Yogi-baer)
  - Fix crash when loading a language file without existing menu item "ttf_extcharset" (Yogi-baer)
  - Change ISA memory hole 512kb option from boolean to true/false/auto. (joncampbell123)
  - Add ISA memory hole 15mb option, make it true/false/auto.
    Auto means off for IBM compatible mode and on for PC-9821 compatible mode.
    This should allow some DOS games that depend on the linear framebuffer
    to work properly even if memsize=16 or higher. (joncampbell123)
  - MIDI: set minimum sysex delay when enabled (mistydemeo)
  - International support in LABEL, COPY, DEL builtin commands (maxpat)
  - Fix palette setting bugs due to SETCOLOR fix in 2023.10.06 release. (maron2000)
      Graphical glitches in Ultima VI(#4507), Chessmaster 3000(#4510), Wizardry VII(#4534) 
      Crash Sid Meyer's Civilization I (#4511)     
      TTF color settings regarding 'colors' option (#4579, #3318) and some more
  - Fix crash when mounting floppy/ISO images with no extension (maron2000)
  - Fix Intel macOS CI builds crashed on startup due to missing dylibs
    (Issue #4438)(maron2000) 
  - Fix TTF mode didn't switch to graphics mode on certain types of machines