@@ -1,5 +1,5 @@
 :DOSBOX-X:LANGUAGE:Hungarian (Hungary)
-#:DOSBOX-X:CODEPAGE:852
+:DOSBOX-X:CODEPAGE:852
 :DOSBOX-X:VERSION:2023.10.06
 :DOSBOX-X:REMARK:
 :AUTOEXEC_CONFIGFILE_HELP
