@@ -2119,6 +2119,9 @@ void DOSBOX_SetupConfigSections(void) {
     Phex = secprop->Add_hex("pc-98 fm board io port", Property::Changeable::WhenIdle,0);
     Phex->Set_help("If set, helps to determine the base I/O port of the FM board. A setting of zero means to auto-determine the port number.");
 
+    Pbool = secprop->Add_bool("pc-98 time stamp",Property::Changeable::WhenIdle,true);
+    Pbool->Set_help("Emulate the time stamp/hardware wait I/O ports at 5Ch and 5Eh. This is recommended.");
+
     Pbool = secprop->Add_bool("pc-98 sound bios",Property::Changeable::WhenIdle,false);
     Pbool->Set_help("Set Sound BIOS enabled bit in MEMSW 4 for some games that require it.\n"
                     "TODO: Real emulation of PC-9801-26K/86 Sound BIOS");
