@@ -207,12 +207,14 @@ void AddMessages() {
 void SetKEYBCP() {
     if (IS_PC98_ARCH || IS_JEGA_ARCH || IS_DOSV || dos_kernel_disabled || !strcmp(RunningProgram, "LOADLIN")) return;
     if (msgcodepage == 437) {dos.loaded_codepage=0;DOS_LoadKeyboardLayout("us", 437, "auto");dos.loaded_codepage=437;}
-    else if (msgcodepage == 850) {dos.loaded_codepage=437;DOS_LoadKeyboardLayout("de", 850, "auto");dos.loaded_codepage=850;}
-    else if (msgcodepage == 857) {dos.loaded_codepage=437;DOS_LoadKeyboardLayout("tr", 857, "auto");dos.loaded_codepage=857;}
-    else if (msgcodepage == 858) {dos.loaded_codepage=437;DOS_LoadKeyboardLayout("es", 858, "auto");dos.loaded_codepage=858;}
-    else if (msgcodepage == 859) {dos.loaded_codepage=437;DOS_LoadKeyboardLayout("fr", 859, "auto");dos.loaded_codepage=859;}
-    else if (msgcodepage == 860) {dos.loaded_codepage=437;DOS_LoadKeyboardLayout("br", 860, "auto");dos.loaded_codepage=860;}
-    else if (msgcodepage == 932) {dos.loaded_codepage=437;DOS_LoadKeyboardLayout("jp", 932, "auto");dos.loaded_codepage=932;}
+    else if (msgcodepage == 850) {DOS_LoadKeyboardLayout("us",437,"auto");DOS_LoadKeyboardLayout("de",850,"auto");dos.loaded_codepage=850;}
+    else if (msgcodepage == 852) {DOS_LoadKeyboardLayout("us",437,"auto");DOS_LoadKeyboardLayout("hu",852,"auto");dos.loaded_codepage=852;}
+    else if (msgcodepage == 857) {DOS_LoadKeyboardLayout("us",437,"auto");DOS_LoadKeyboardLayout("tr",857,"auto");dos.loaded_codepage=857;}
+    else if (msgcodepage == 858) {DOS_LoadKeyboardLayout("us",437,"auto");DOS_LoadKeyboardLayout("es",858,"auto");dos.loaded_codepage=858;}
+    else if (msgcodepage == 859) {DOS_LoadKeyboardLayout("us",437,"auto");DOS_LoadKeyboardLayout("fr",859,"auto");dos.loaded_codepage=859;}
+    else if (msgcodepage == 860) {DOS_LoadKeyboardLayout("us",437,"auto");DOS_LoadKeyboardLayout("br",860,"auto");dos.loaded_codepage=860;}
+    else if (msgcodepage == 866) {DOS_LoadKeyboardLayout("us",437,"auto");DOS_LoadKeyboardLayout("ru",866,"auto");dos.loaded_codepage=866;}
+    else if (msgcodepage == 932) {DOS_LoadKeyboardLayout("us",437,"auto");DOS_LoadKeyboardLayout("jp",932,"auto");dos.loaded_codepage=932;}
     else if (msgcodepage == 936) {dos.loaded_codepage=0;DOS_LoadKeyboardLayout("us", 437, "auto");DOS_LoadKeyboardLayout("cn", 936, "auto");dos.loaded_codepage=936;}
     else if (msgcodepage == 949) {dos.loaded_codepage=0;DOS_LoadKeyboardLayout("us", 437, "auto");DOS_LoadKeyboardLayout("ko", 949, "auto");dos.loaded_codepage=949;}
     else if (msgcodepage == 950) {dos.loaded_codepage=0;DOS_LoadKeyboardLayout("us", 437, "auto");DOS_LoadKeyboardLayout("tw", 950, "auto");dos.loaded_codepage=950;}
